fix missing inputs in db-migration actions

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -360,5 +360,8 @@ jobs:
       - name: Migrate database
         uses: kkp-dfs/dime-github-actions-workflows/db-migration@main
         with:
+          application_name: ${{ inputs.application_name }}
           directory: ${{ inputs.migrate_dir }}
           schema: ${{ inputs.migrate_schema }}
+          helm_ref: ${{ inputs.helm_ref }}
+          gh_access_token: ${{ secrets.gh_access_token }}
