--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -27,17 +27,16 @@ on:
         required: false
         type: number
         default: 80
+      slack_channel:
+        description: The slack channel that send notification.
+        type: string
+        required: true
 
     secrets:
       gh_access_token:
         required: true
-      slack_channels:
-        description: The slack channel that send notification.
+      slack_webhook:
         required: true
-
-env:
-  SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
-  SLACK_USERNAME: GitHub Actions
 
 jobs:
   prepare:
@@ -68,6 +67,11 @@ jobs:
         password: ${{ needs.prepare.outputs.ecr_password }}
       volumes:
         - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
+    env:
+      SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+      SLACK_USERNAME: GitHub Actions
+      SLACK_CHANNEL: ${{ inputs.slack_channel }}
+      SLACK_WEBHOOK: ${{ secrets.slack_webhook }}
     steps:
       - name: Cache module and tools
         uses: actions/cache@v2
@@ -89,39 +93,17 @@ jobs:
           gh_access_token: ${{ secrets.gh_access_token }}
           minimum_coverage: 80
 
-  pass:
-    name: Success Notification
-    needs:
-      - prepare
-      - unit-test
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    strategy:
-      matrix: ${{ fromJSON(needs.prepare.outputs.matrix) }}
-    env:
-      SLACK_CHANNEL: ${{ matrix.name }}
-      SLACK_WEBHOOK: ${{ matrix.webhook }}
-    steps:
-      - uses: rtCamp/action-slack-notify@v2
+      - name: Success Notification
+        if: ${{ success() }}
+        uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_COLOR: good
           SLACK_MESSAGE: This repo passed all test cases of unit-test and there is coverage over than ${{ inputs.minimum_coverage }}%
           SLACK_TITLE: ${{ inputs.application_name }} unit-test is PASS
 
-  fail:
-    name: Failure Notification
-    needs:
-      - prepare
-      - unit-test
-    runs-on: ubuntu-latest
-    if: ${{ failure() }}
-    strategy:
-      matrix: ${{ fromJSON(needs.prepare.outputs.matrix) }}
-    env:
-      SLACK_CHANNEL: ${{ matrix.name }}
-      SLACK_WEBHOOK: ${{ matrix.webhook }}
-    steps:
-      - uses: rtCamp/action-slack-notify@v2
+      - name: Failure Notification
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_COLOR: danger
           SLACK_MESSAGE: This repo fail on some test cases of unit-test or there is coverage less than ${{ inputs.minimum_coverage }}%
