--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -11,6 +11,7 @@ on:
       node-version:
         description: Version of node that would like to install
         required: false
+        type: string
         default: '16'
       base_ref:
         description: The branch or tag ref or commit SHA that be base code.
