--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -8,6 +8,10 @@ inputs:
   image:
     description: Docker image name
     required: false
+  platforms:
+    description: List of target platforms for build
+    required: false
+    default: linux/amd64,linux/arm64
   build-args:
     description: List of build-time variables
     required: false
@@ -57,6 +61,7 @@ runs:
       with:
         context: .
         push: true
+        platforms: ${{ inputs.platforms }}
         build-args: ${{ inputs.build_args }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
