--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -69,7 +69,7 @@ on:
         description: List of target platforms for build
         required: false
         type: string
-        default: linux/amd64,linux/arm64
+        default: linux/amd64
       build_args:
         description: List of build-time variables
         required: false
