--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -11,7 +11,7 @@ inputs:
   platforms:
     description: List of target platforms for build
     required: false
-    default: linux/amd64,linux/arm64
+    default: linux/amd64
   build_args:
     description: List of build-time variables
     required: false
