--- a/node-setup/action.yml
+++ b/node-setup/action.yml
@@ -32,6 +32,6 @@ runs:
           ./node_modules
           ./*/*/node_modules
           ${{ steps.yarn-cache-dir-path.outputs.dir }}
-        key: ${{ runner.os }}-node-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-node-${{ inputs.repository }}-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-${{ inputs.repository }}-
