test to use allow fail in integration-testing

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -235,7 +235,7 @@ jobs:
     steps:
       - name: Run golang integration test
         if: ${{ inputs.code_lang == 'golang' }}
-        uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
+        uses: kkp-dfs/dime-github-actions-workflows/golang-testing@support-continue-on-error
         with:
           application_name: ${{ inputs.application_name }}
           repository: ${{ inputs.repository }}
@@ -249,6 +249,7 @@ jobs:
           minimum_coverage: 60
           slack_webhook: ${{ secrets.slack_webhook }}
           slack_channel: ${{ inputs.slack_channel }}
+          allow_failure: true
 
   build:
     name: Build & push docker images to registry
