--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -233,10 +233,42 @@ jobs:
     env: 
       GOPRIVATE: github.com/kkp-dfs/*
     steps:
+      - name: Setup integration test environment
+        id: setup
+        if: ${{ inputs.code_lang == 'golang' }}
+        run: |
+          JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
+          echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
+          TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/login | jq -r '.auth.client_token')
+
+          DB=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/database/sit)
+          DB_HOST=dime-default-db.csi5ylritr1l.ap-southeast-1.rds.amazonaws.com
+          DB_ADMIN_USER=$(echo $DB | jq -r '.data.data.username')
+          DB_ADMIN_PASS=$(echo $DB | jq -r '.data.data.password')
+          DB_NAME=${{ inputs.application_name.replace("-", "_") }}_${{ github.sha }}
+          DB_USER=${{ inputs.application_name }}
+          DB_PASS=${{ github.sha }}
+
+          set -x
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "CREATE DATABASE $DB_NAME;"
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "CREATE USER '$DB_USER'@'%' IDENTIFIED BY '$DB_PASS';"
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "GRANT ALL PRIVILEGES ON '$DB_NAME.*' TO '$DB_USER'@'%';"
+          echo "::set-output name=db_host::$DB_HOST"
+          echo "::set-output name=db_admin_user::$(echo $DB_ADMIN_USER | base64)"
+          echo "::set-output name=db_admin_pass::$(echo $DB_ADMIN_PASS | base64)"
+          echo "::set-output name=db_name::$DB_NAME"
+          echo "::set-output name=db_user::$DB_USER"
+          echo "::set-output name=db_pass::$DB_PASS"
+          set +x
       - name: Run golang integration test
         if: ${{ inputs.code_lang == 'golang' }}
         uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
         continue-on-error: true
+        env:
+          DB_HOST: ${{ steps.setup.db_host }}
+          DB_DATABASE: ${{ steps.setup.db_name }}
+          DB_USERNAME: ${{ steps.setup.db_user }}
+          DB_PASSWORD: ${{ steps.setup.db_pass }}
         with:
           application_name: ${{ inputs.application_name }}
           repository: ${{ inputs.repository }}
@@ -250,6 +282,17 @@ jobs:
           minimum_coverage: 60
           slack_webhook: ${{ secrets.slack_webhook }}
           slack_channel: ${{ inputs.slack_channel }}
+      - name: Tear down integration test environment
+        if: ${{ inputs.code_lang == 'golang' && always() }}
+        run: |
+          DB_HOST=${{ steps.setup.db_host }}
+          DB_ADMIN_USER=$(echo ${{ steps.setup.db_admin_user }} | base64 -d)
+          DB_ADMIN_PASS=$(echo ${{ steps.setup.db_admin_pass }} | base64 -d)
+          DB_NAME=${{ steps.setup.db_name }}
+          DB_USER=${{ steps.setup.db_user }}
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "REVOKE ALL PRIVILEGES, GRANT OPTION FROM '$DB_USER'@'%';"
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "DROP USER '$DB_USER'@'%';"
+          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "DROP DATABASE '$DB_NAME';"
 
   build:
     name: Build & push docker images to registry
