--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -236,6 +236,7 @@ jobs:
       - name: Setup integration test environment
         id: setup
         if: ${{ inputs.code_lang == 'golang' }}
+        shell: bash
         run: |
           JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
           echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
@@ -245,21 +246,18 @@ jobs:
           DB_HOST=dime-default-db.csi5ylritr1l.ap-southeast-1.rds.amazonaws.com
           DB_ADMIN_USER=$(echo $DB | jq -r '.data.data.username')
           DB_ADMIN_PASS=$(echo $DB | jq -r '.data.data.password')
-          DB_NAME=${{ inputs.application_name.replace("-", "_") }}_${{ github.sha }}
+          DB_NAME=${{ inputs.application_name }}-${{ github.sha }}
           DB_USER=${{ inputs.application_name }}
           DB_PASS=${{ github.sha }}
-
-          set -x
-          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "CREATE DATABASE $DB_NAME;"
-          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "CREATE USER '$DB_USER'@'%' IDENTIFIED BY '$DB_PASS';"
-          mysql --host=$DB_HOST -u $DB_ADMIN_USER -p$DB_ADMIN_PASS -e "GRANT ALL PRIVILEGES ON '$DB_NAME.*' TO '$DB_USER'@'%';"
-          echo "::set-output name=db_host::$DB_HOST"
-          echo "::set-output name=db_admin_user::$(echo $DB_ADMIN_USER | base64)"
-          echo "::set-output name=db_admin_pass::$(echo $DB_ADMIN_PASS | base64)"
-          echo "::set-output name=db_name::$DB_NAME"
-          echo "::set-output name=db_user::$DB_USER"
-          echo "::set-output name=db_pass::$DB_PASS"
-          set +x
+          echo "::set-output name=db_host::${DB_HOST}"
+          echo "::set-output name=db_admin_user::$(echo ${DB_ADMIN_USER} | base64)"
+          echo "::set-output name=db_admin_pass::$(echo ${DB_ADMIN_PASS} | base64)"
+          echo "::set-output name=db_name::${DB_NAME//-/_}"
+          echo "::set-output name=db_user::${DB_USER}"
+          echo "::set-output name=db_pass::${DB_PASS}"
+          mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE DATABASE ${DB_NAME//-/_} CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;"
+          mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE USER '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}';"
+          mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "GRANT ALL PRIVILEGES ON '${DB_NAME//-/_}.*' TO '${DB_USER}'@'%';"
       - name: Run golang integration test
         if: ${{ inputs.code_lang == 'golang' }}
         uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
