--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -255,9 +255,30 @@ jobs:
           echo "::set-output name=db_name::${DB_NAME//-/_}"
           echo "::set-output name=db_user::${DB_USER:0:32}"
           echo "::set-output name=db_pass::${DB_PASS}"
+
           mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE DATABASE IF NOT EXISTS ${DB_NAME//-/_} CHARACTER SET utf8mb4 COLLATE utf8mb4_bin;"
           mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE USER IF NOT EXISTS '${DB_USER:0:32}'@'%' IDENTIFIED BY '${DB_PASS}';"
           mysql --host=${DB_HOST} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "GRANT ALL PRIVILEGES ON ${DB_NAME//-/_}.* TO '${DB_USER:0:32}'@'%'; FLUSH PRIVILEGES;"
+
+          RMQ=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/rabbitmq/sit)
+          RMQ_HOST=internal-abea450ac00a74238af70161947df1b8-2039002308.ap-southeast-1.elb.amazonaws.com
+          RMQ_PORT=5672
+          RMQ_ADMIN_USER=$(echo $RMQ | jq -r '.data.data.admin_username')
+          RMQ_ADMIN_PASS=$(echo $RMQ | jq -r '.data.data.admin_password')
+          RMQ_VHOST=${{ inputs.application_name }}-${{ github.sha }}
+          RMQ_USER=${{ inputs.application_name }}-${{ github.sha }}
+          RMQ_PASS=${{ github.sha }}
+          echo "::set-output name=rmq_host::${RMQ_HOST}"
+          echo "::set-output name=rmq_port::${RMQ_PORT}"
+          echo "::set-output name=rmq_admin_user::$(echo ${RMQ_ADMIN_USER} | base64)"
+          echo "::set-output name=rmq_admin_pass::$(echo ${RMQ_ADMIN_PASS} | base64)"
+          echo "::set-output name=rmq_vhost::${RMQ_VHOST}"
+          echo "::set-output name=rmq_user::${RMQ_USER}"
+          echo "::set-output name=rmq_pass::${RMQ_PASS}"
+
+          curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" https://rabbitmq.sit.mydime.tech/api/vhosts/${RMQ_VHOST}
+          curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"password\":\"${RMQ_PASS}\",\"tags\":\"management\"}" https://rabbitmq.sit.mydime.tech/api/users/${RMQ_USER}
+          curl -X PUT -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" -d "{\"configure\":\".*\",\"write\":\".*\",\"read\":\".*\"}" https://rabbitmq.sit.mydime.tech/api/permissions/${RMQ_VHOST}/${RMQ_USER}
       - name: Run golang integration test
         if: ${{ inputs.code_lang == 'golang' }}
         uses: kkp-dfs/dime-github-actions-workflows/golang-testing@main
@@ -268,6 +289,10 @@ jobs:
           DB_DATABASE: ${{ steps.setup.outputs.db_name }}
           DB_USERNAME: ${{ steps.setup.outputs.db_user }}
           DB_PASSWORD: ${{ steps.setup.outputs.db_pass }}
+          RABBITMQ_HOST: ${{ steps.setup.outputs.rmq_host }}
+          RABBITMQ_PORT: ${{ steps.setup.outputs.rmq_port }}
+          RABBITMQ_USERNAME: ${{ steps.setup.outputs.rmq_user }}
+          RABBITMQ_PASSWORD: ${{ steps.setup.outputs.rmq_pass }}
         with:
           application_name: ${{ inputs.application_name }}
           repository: ${{ inputs.repository }}
@@ -292,6 +317,14 @@ jobs:
           mysql --host=${DB_HOST} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "REVOKE ALL PRIVILEGES, GRANT OPTION FROM '${DB_USER}'@'%';"
           mysql --host=${DB_HOST} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP USER '${DB_USER}'@'%';"
           mysql --host=${DB_HOST} -u ${DB_ADMIN_USER} -p${DB_ADMIN_PASS} -e "DROP DATABASE ${DB_NAME};"
+
+          RMQ_VHOST=${{ steps.setup.outputs.rmq_vhost }}
+          RMQ_USER=${{ steps.setup.outputs.rmq_user }}
+          RMQ_ADMIN_USER=$(echo ${{ steps.setup.outputs.rmq_admin_user }} | base64 -d)
+          RMQ_ADMIN_PASS=$(echo ${{ steps.setup.outputs.rmq_admin_pass }} | base64 -d)
+          curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" https://rabbitmq.sit.mydime.tech/api/permissions/${RMQ_VHOST}/${RMQ_USER}
+          curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" https://rabbitmq.sit.mydime.tech/api/users/${RMQ_USER}
+          curl -X DELETE -u "${RMQ_ADMIN_USER}:${RMQ_ADMIN_PASS}" https://rabbitmq.sit.mydime.tech/api/vhosts/${RMQ_VHOST}
 
   build:
     name: Build & push docker images to registry
