--- a/golang-testing/action.yml
+++ b/golang-testing/action.yml
@@ -61,6 +61,8 @@ runs:
       run: |
         export PATH=$HOME/go/bin:$(go env GOPATH)/bin:/go/bin:$PATH
         touch $HOME/.ack-ginkgo-rc
+        go get github.com/onsi/ginkgo/v2/ginkgo
+        go get github.com/onsi/gomega/...
         make ${{ inputs.test_name }}
         make ${{ inputs.coverage_generator }}
 
