force go install dependency modules

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -136,6 +136,7 @@ jobs:
       - name: Install go modules
         if: ${{ inputs.code_lang == 'golang' }}
         run: |
+          go install
           make tidy
           make tools-install
       - name: Get credentials
