--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -72,6 +72,7 @@ jobs:
       SLACK_USERNAME: GitHub Actions
       SLACK_CHANNEL: ${{ inputs.slack_channel }}
       SLACK_WEBHOOK: ${{ secrets.slack_webhook }}
+    continue-on-error: true
     steps:
       - name: Cache module and tools
         uses: actions/cache@v2
@@ -106,7 +107,6 @@ jobs:
           export PATH=/opt/flutter/bin:$PATH
 
           envsubst < environment_secret_template.yaml > environment_secret.yaml
-          cat environment_secret.yaml
           make gen-config-sit
     
       - name: Run flutter unit-test
