--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -56,6 +56,54 @@ jobs:
           echo "::set-output name=password::$(echo $TOKEN | cut -d: -f2)"
           echo "::set-output name=matrix::$(echo "{\"include\": ${{ secrets.SLACK_CHANNELS }} }")"
 
+  analyze:
+    name: Run analyze
+    needs: prepare
+    runs-on: [self-hosted, linux, deployment, main]
+    container:
+      image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/flutter:2.8.1-stable
+      credentials:
+        username: ${{ needs.prepare.outputs.ecr_username }}
+        password: ${{ needs.prepare.outputs.ecr_password }}
+      volumes:
+        - /var/run/secrets/kubernetes.io/serviceaccount:/var/run/secrets/kubernetes.io/serviceaccount
+    env:
+      SLACK_ICON: https://avatars.githubusercontent.com/u/90231066?s=200&v=4
+      SLACK_USERNAME: GitHub Actions
+      SLACK_CHANNEL: ${{ inputs.slack_channel }}
+      SLACK_WEBHOOK: ${{ secrets.slack_webhook }}
+    steps:
+      - name: Cache module and tools
+        uses: actions/cache@v2
+        with:
+          path: |
+            /opt/flutter/.pub-cache
+          key: ${{ runner.os }}-flutter-${{ inputs.repository }}-${{ hashFiles('**/pubspec.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-flutter-${{ inputs.repository }}-
+
+      - name: Checkout branch
+        uses: kkp-dfs/dime-github-actions-workflows/merge-test-pr@main
+        with:
+          repository: ${{ inputs.repository }}
+          base_ref: ${{ inputs.base_ref }}
+          target_ref: ${{ inputs.target_ref }}
+          gh_access_token: ${{ secrets.gh_access_token }}
+
+      - name: Run flutter analyze
+        run: |
+          export PATH=/opt/flutter/bin:$PATH
+          flutter pub get
+          flutter analyze --pub
+
+      - name: Failure Notification
+        if: ${{ failure() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: Flutter analyze found issues
+          SLACK_TITLE: ${{ inputs.application_name }} analyze is FAIL
+
   unit-test:
     name: Run unit testing
     needs: prepare
