fix failed to load with go/packages

--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -185,6 +185,7 @@ jobs:
         uses: golangci/golangci-lint-action@v2
         with:
           args: -E ${{ matrix.linter }}
+          modules-download-mode: vendor
 
       - name: Slack Notification
         if: ${{ failure() }}
