--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -186,7 +186,8 @@ jobs:
         # env:
         #   GO111MODULE: off
         with:
-          args: -E ${{ matrix.linter }} --skip-files ".*_test\\.go" --skip-dirs ".*_mock" --skip-dirs ".*_gen"
+          # args: -E ${{ matrix.linter }} --skip-files ".*_test\\.go" --skip-dirs ".*_mock" --skip-dirs ".*_gen"
+          args: -E ${{ matrix.linter }}
           version: latest
       - name: Slack Notification
         if: ${{ failure() }}
