run make tidy and tools-install in go testing

--- a/golang-testing/action.yml
+++ b/golang-testing/action.yml
@@ -61,6 +61,8 @@ runs:
       run: |
         export PATH=$HOME/go/bin:$(go env GOPATH)/bin:/go/bin:$PATH
         touch $HOME/.ack-ginkgo-rc
+        make tidy
+        make tools-install
         make ${{ inputs.test_name }}
         make ${{ inputs.coverage_generator }}
 
